chore[MAS-144]: remove legacy fulfillments code and fix related issues